# course-audit-system

./: .gitignore  Cargo.toml  README.md  SETUP.md  index.html  style.css  tailwind.config.js
.github/workflows/: deploy.yml
src/: main.rs  models.rs
src/components/: category_card.rs  mod.rs
src/data/: gen_ed.rs  major.rs  mod.rs
src/logic/: auditor.rs  mod.rs  parser.rs
