[package]
name = "course-audit-system"
version = "1.0.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6" }
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "Url",
    "Blob",
    "Event",
    "DragEvent",
    "DataTransfer",
    "FileReader",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-file = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
regex = "1.10"
js-sys = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
